feat: getall api

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DB": "Server=(local);uid=sa;pwd=Thang12345;database=Lab02PRN;TrustServerCertificate=True"
+  }
 }
